src/objects/Campaign_ASA_Attendees__c.object
<CustomObject>
    <fields>
        <fullName>ASA_Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ASA Attendee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaign_Email_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Attendee Feedback</relationshipLabel>
        <relationshipName>Campaign_Email_Surveys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Recommendation_for_Next_Year_s_Show__c</fullName>
        <label>Recommendation for Next Year&apos;s Show</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Present</fullName>
                </value>
                <value>
                    <fullName>Attend</fullName>
                </value>
                <value>
                    <fullName>Present &amp; Attend</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t Go</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Cost_of_Attendance__c</fullName>
        <inlineHelpText>This includes airfare, hotel, meals, transportation.</inlineHelpText>
        <label>Total Cost of Attendance?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Why_did_they_attend__c</fullName>
        <label>Reason for Attending</label>
        <type>TextArea</type>
    </fields>
    <label>Attendee Feedback</label>
    <nameField>
        <displayFormat>S-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendee Feedback</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>